syntax = "proto3";
option go_package = "api/client;client_side";

package client_side;

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

service ClientSide {
  rpc GetUser(stream GetUserRequest) returns (GetUserResponse) {}
}